--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
             </div> 
             
           </div>
+          <div class="border-b-2 border-dotted border-black translate-y-2">
+
+          </div>
         <!-- carousel -->
         <!-- banner -->
 
@@ -95,11 +98,11 @@
 
     <!--  -->
     <!--  -->
-    <main class="container mx-auto lg:px-24 px-8 my-12 lg:my-20">
+    <main class="container mx-auto lg:px-24 px-8 my-12 lg:my-20 ">
         <div class="all">
-            <div class="text-center">
-                <h1 class="text-4xl font-bold">Professional Hockeys Club</h1>
-                <p class="w-full lg:text-[14px] mt-5 w-2/4 m-auto">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            <div class="text-center border-b-2 border-dotted border-black translate-y-2">
+                <h1 class="text-[22px] lg:text-4xl font-bold">Professional Hockeys Club</h1>
+                <p class="w-full text-[12px] pb-5 lg:text-[14px] mt-5 w-2/4 m-auto">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
             </div>
 
             <!--  -->
@@ -136,6 +139,68 @@
                 </div>
             </div>
         </div>
+        <div class="border-b-2 border-dotted border-black translate-y-2">
+
+        </div>
+        <!--  -->
+        <!--  -->
+
+        <section>
+            <div class="all mt-24">
+                <div class="text-center">
+                    <h1 class="text-[22px] lg:text-4xl font-bold">Program Sections</h1>
+                    <p class="w-full text-[12px] pb-5 lg:text-[14px] mt-5 w-2/4 m-auto">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+                </div>
+                <!--  -->
+                <div class=" flex flex-col  lg:flex-row gap-10 items-center justify-center">
+                    <div class="num-one">
+                        <!--  -->
+                        <div class="hero w-[100%] lg:w-[573px] h-[338px] rounded-2xl overflow-hidden"  style="background-image: url(./Images/2.png);">
+                            <div class="hero-overlay bg-opacity-60"></div>
+                            <div class="hero-content text-left  text-neutral-content">
+                              <div class="max-w-md">
+                                <h1 class="text-2xl py-[2px]">Junior Program</h1>
+                                <p class="text-sm py-5">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                                    enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+                                    <button class="btn border-none btn-active btn-secondary bg-[#FF4240]">Register Now!</button>
+                              </div>
+                            </div>
+                          </div>
+                        <!--  -->
+                    </div>
+                    <div class="num-two">
+                        <!--  -->
+                        <div class="hero w-[100%] lg:w-[573px] h-[338px] rounded-2xl overflow-hidden"  style="background-image: url(./Images/3.png);">
+                            <div class="hero-overlay bg-opacity-60"></div>
+                            <div class="hero-content text-left  text-neutral-content">
+                              <div class="max-w-md">
+                                <h1 class="text-2xl py-[2px]">Junior Program</h1>
+                                <p class="text-sm py-5">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                                    enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+                                    <button class="btn border-none btn-active btn-secondary bg-[#FF4240]">Register Now!</button>
+                              </div>
+                            </div>
+                          </div>
+                        <!--  -->
+                    </div>
+                </div>
+                <div class="three-num">
+                    <!--  -->
+                    <div class="hero w-[100%]  h-[338px] lg:w-[1186px] lg:h-[425px] mt-10 m-auto rounded-2xl overflow-hidden"  style="background-image: url(./Images/4.png);">
+                        <div class="hero-overlay bg-opacity-60"></div>
+                        <div class="hero-content mr-0 mt-0 lg:mr-[600px] mt-32  text-neutral-content">
+                          <div class="max-w-md ">
+                            <h1 class="text-2xl py-[2px]">Junior Program</h1>
+                            <p class="text-sm py-5">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                                enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+                                <button class="btn border-none btn-active btn-secondary bg-[#FF4240]">Register Now!</button>
+                          </div>
+                        </div>
+                      </div>
+                    <!--  -->
+                </div>
+            </div>
+        </section>
 
     </main>
     <!--  -->
