--- a/index.html
+++ b/index.html
@@ -885,29 +885,33 @@
 
     <!--  -->
     <!--  -->
-    <div class="container mx-auto mt-12 lg:mt-24 bg-[#131318]">
-      <footer class="footer p-10  text-white text-base-content ">
+    <div class=" bg-[#131318] mt-24">
+      <footer class="footer p-10   text-white text-base-content ">
       
-        <nav>
+        <nav class="container mx-auto px-2 flex flex-col  items-start justify-center lg:px-24 items-start">
           <header class="footer-title">Services</header> 
           <a class="link link-hover">Branding</a>
           <a class="link link-hover">Design</a>
           <a class="link link-hover">Marketing</a>
           <a class="link link-hover">Advertisement</a>
         </nav> 
-        <nav>
-          <header class="footer-title">Company</header> 
-          <a class="link link-hover">About us</a>
-          <a class="link link-hover">Contact</a>
-          <a class="link link-hover">Jobs</a>
-          <a class="link link-hover">Press kit</a>
-        </nav> 
-        <nav>
-          <header class="footer-title">Legal</header> 
-          <a class="link link-hover">Terms of use</a>
-          <a class="link link-hover">Privacy policy</a>
-          <a class="link link-hover">Cookie policy</a>
-        </nav> 
+        <!--  -->
+        <div class="flex  gap-48">
+          <nav class="flex flex-col ">
+            <header class="footer-title">Company</header> 
+            <a class="link link-hover">About us</a>
+            <a class="link link-hover">Contact</a>
+            <a class="link link-hover">Jobs</a>
+            <a class="link link-hover">Press kit</a>
+          </nav> 
+          <nav class="flex flex-col ">
+            <header class="footer-title ">Legal</header> 
+            <a class="link link-hover">Terms of use</a>
+            <a class="link link-hover">Privacy policy</a>
+            <a class="link link-hover">Cookie policy</a>
+          </nav> 
+        </div>
+        <!--  -->
         <nav>
           <header class="footer-title">Legal</header> 
           <a class="link link-hover">Terms of use</a>
