--- a/index.html
+++ b/index.html
@@ -885,35 +885,39 @@
 
     <!--  -->
     <!--  -->
-    <div class=" bg-[#131318] mt-24">
-      <footer class="footer p-10   text-white text-base-content ">
+    <div class=" bg-[#131318] w-[100%] mt-24">
+      <footer class="footer  pt-14 pb-14  text-white text-base-content ">
       
-        <nav class="container mx-auto px-2 flex flex-col  items-start justify-center lg:px-24 items-start">
-          <header class="footer-title">Services</header> 
-          <a class="link link-hover">Branding</a>
-          <a class="link link-hover">Design</a>
-          <a class="link link-hover">Marketing</a>
-          <a class="link link-hover">Advertisement</a>
+        <nav class="container w-[100%] mx-auto px-2 flex flex-col  items-center justify-center lg:items-start lg:pl-24 ">
+          <header class="footer-title">Get in Touch</header> 
+          <p class="w-2/3 text-center lg:text-left">Dit amet consectetur. Condimentum  adipiscing aliquam turpis placerat dolor. </p>
+          <a class="link link-hover flex items-center gap-3 justify-center"><i class="text-red-700 fa-regular fa-envelope"></i>  nazmul.islam.juwel9@gmail.com</a>
+          <a class="link link-hover flex items-center gap-3 justify-center"><i class="text-red-700 fa-solid fa-phone"></i>    01234567890</a>
+          
         </nav> 
         <!--  -->
-        <div class="flex  gap-48">
+        <div class="flex justify-between px-2  w-[100%]">
           <nav class="flex flex-col ">
             <header class="footer-title">Company</header> 
             <a class="link link-hover">About us</a>
             <a class="link link-hover">Contact</a>
             <a class="link link-hover">Jobs</a>
             <a class="link link-hover">Press kit</a>
+            <a class="link link-hover">Contact Us</a>
+            <a class="link link-hover">FAQ</a>
           </nav> 
           <nav class="flex flex-col ">
-            <header class="footer-title ">Legal</header> 
+            <header class="footer-title ">support</header> 
             <a class="link link-hover">Terms of use</a>
             <a class="link link-hover">Privacy policy</a>
             <a class="link link-hover">Cookie policy</a>
+            <a class="link link-hover">News & Article</a>
+            <a class="link link-hover">Legal Notice</a>
           </nav> 
         </div>
         <!--  -->
-        <nav>
-          <header class="footer-title">Legal</header> 
+        <nav class="container mx-auto px-2 flex flex-col  items-center lg:items-end text-left justify-start px-24">
+          <header class="footer-title">Services</header> 
           <a class="link link-hover">Terms of use</a>
           <a class="link link-hover">Privacy policy</a>
           <a class="link link-hover">Cookie policy</a>
