--- a/index.html
+++ b/index.html
@@ -879,6 +879,70 @@
       <!-- client qus end -->
       <!--  -->
       <!--  -->
+      <section class="container mx-auto mt-12 lg:mt-24">
+        <div class="all-in-one">
+          <!--  -->
+          <div class="up-text text-center">
+            <h1 class="text-[22px] lg:text-4xl font-bold">Get In Touch</h1>
+            <p class="w-full text-[12px] pb-5 lg:text-[14px] mt-5 w-2/4 m-auto">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+          </div>
+          <!--  -->
+
+
+          <div class="two-part-head flex flex-col lg:flex-row gap-10 mt-8 ">
+            <!--  -->
+            <div class="part-one w-[100%] lg:w-[40%] border border-zinc-200 rounded-xl flex flex-col gap-6 pt-6 pb-6 justify-center items-center">
+              <!--  -->
+              <div class="one-div px-4 lg:px-0 w-[95%] lg:w-[370px] bg-[#bced6d1a]  pl-4 pt-7 rounded-lg ">
+                <img src="./Images/Group 1171275317.png" class="">
+                <p class="text-[16px] text-[#13131866] pt-4">Phone Number</p>
+                <h6 class="text-[18px] font-bold pb-8 ">+8801234566878</h6>
+              </div>
+              <!--  -->
+              <div class="one-div w-[95%] lg:w-[370px] bg-[#fddd5f1a] pl-4 pt-7 rounded-lg ">
+                <img src="./Images/Group 1171275318.png" class="">
+                <p class="text-[16px] text-[#13131866] pt-4">Email</p>
+                <h6 class="text-[18px] font-bold pb-8 ">nazmul.islam.juwel9@gmail.com</h6>
+              </div>
+              <!--  -->
+              <div class="one-div w-[95%] lg:w-[370px] bg-[#629cf31a] pl-4 pt-7 rounded-lg ">
+                <img src="./Images/Group 1171275321.png" class="">
+                <p class="text-[16px] text-[#13131866] pt-4">Location</p>
+                <h6 class="text-[18px] font-bold pb-8 ">Mirsarai,Chittagong</h6>
+              </div>
+              <!--  -->
+              
+            </div>
+            <div class="part-two w-[60%] border border-slate-500">
+              <!--  -->
+              <div class="grid grid-cols-2  self-center content-center">
+                <div class="grid-child">
+                  <h1 class="text-[18px] font-bold">Your Name</h1>
+                <input type="text" placeholder="You can't touch this" class="input input-bordered w-full max-w-xs" disabled />
+                </div>
+                <!--  -->
+                <div class="grid-child">
+                  <h1 class="text-[18px] font-bold">Your Name</h1>
+                <input type="text" placeholder="You can't touch this" class="input input-bordered w-full max-w-xs" disabled />
+                </div>
+                <!--  -->
+                <div class="grid-child">
+                  <h1 class="text-[18px] font-bold">Your Name</h1>
+                <input type="text" placeholder="You can't touch this" class="input input-bordered w-full max-w-xs" disabled />
+                </div>
+                <!--  -->
+                <div class="grid-child">
+                  <h1 class="text-[18px] font-bold">Your Name</h1>
+                <input type="text" placeholder="You can't touch this" class="input input-bordered w-full max-w-xs" disabled />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--  -->
+      <!--  -->
+      <!--  -->
     </main>
     <!--  -->
     <!--  -->
