get touch dection complete

--- a/index.html
+++ b/index.html
@@ -962,6 +962,21 @@
               
             </div>
           </div>
+          <!--  -->
+          <div class="foot mt-10">
+            <footer class="footer footer-center rounded-xl  p-4 bg-base-300 text-base-content">
+              <aside>
+                <h3 class="text-2xl font-bold pb-3">Social Media</h3>
+                <div class="icon text-2xl flex items-center gap-5">
+                  <i class="fa-brands fa-x-twitter"></i>
+                  <i class="fa-brands fa-instagram"></i>
+                  <i class="fa-brands fa-facebook-f"></i>
+                  <i class="fa-brands fa-github"></i>
+                </div>
+              </aside>
+            </footer>
+          </div>
+          <!--  -->
         </div>
       </section>
       <!--  -->
