--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
               <li><a>Contacts</a></li>
             </ul>
           </div>
-          <a class="btn btn-ghost text-[24px] pr-28 lg:text-4xl font-bold"
+          <a class="btn btn-ghost text-[24px]  lg:text-4xl font-bold"></a>
+          <!-- pr-28 -->
+  
             >Hockey's</a
           >
         </div>
@@ -893,19 +895,19 @@
             <!--  -->
             <div class="part-one w-[100%] lg:w-[40%] border border-zinc-200 rounded-xl flex flex-col gap-6 pt-6 pb-6 justify-center items-center">
               <!--  -->
-              <div class="one-div  w-[95%] lg:w-[370px] bg-[#bced6d1a]  pl-4 pt-7 rounded-lg ">
+              <div class="one-div  w-[95%] lg: bg-[#bced6d1a]  pl-4 pt-7 rounded-lg ">
                 <img src="./Images/Group 1171275317.png" class="">
                 <p class="text-[16px] text-[#13131866] pt-4">Phone Number</p>
                 <h6 class="text-[18px] font-bold pb-8 ">+8801234566878</h6>
               </div>
               <!--  -->
-              <div class="one-div w-[95%] lg:w-[370px] bg-[#fddd5f1a] pl-4 pt-7 rounded-lg ">
+              <div class="one-div w-[95%] lg: bg-[#fddd5f1a] pl-4 pt-7 rounded-lg ">
                 <img src="./Images/Group 1171275318.png" class="">
                 <p class="text-[16px] text-[#13131866] pt-4">Email</p>
                 <h6 class="text-[18px] font-bold pb-8 ">nazmul.juwel9@gmail.com</h6>
               </div>
               <!--  -->
-              <div class="one-div w-[95%] lg:w-[370px] bg-[#629cf31a] pl-4 pt-7 rounded-lg ">
+              <div class="one-div w-[95%] lg: bg-[#629cf31a] pl-4 pt-7 rounded-lg ">
                 <img src="./Images/Group 1171275321.png" class="">
                 <p class="text-[16px] text-[#13131866] pt-4">Location</p>
                 <h6 class="text-[18px] font-bold pb-8 ">Mirsarai,Chittagong</h6>
